--- a/index.html
+++ b/index.html
@@ -1,55 +1,14 @@
 <!DOCTYPE html>
-<html img="en">
-    <head>
-        <title>RWD</title>
-        <link rel="stylesheet" href="css/main.css">
+<html>
 
-    </head>
-    <body> 
-        <header> 
-            <a class="Masterlogo" href="/">
+<head>
+    <title>Button Creator</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="button.js"></script>
+    <div></div>
+</head>
 
-                <span class="rwdlogomain">RWD</span>
-                <span class="rwdlogosecond">Education</span>
-            </a>
-            <nav class="bogo">
-                <a href ='a'>About</a>
-                <a href ='a'>Review</a>
-                <a href ='a'>List</a>
-                <a href ='a'>Code</a>
-            </nav>
-        </header>
-        <main>
-            <div class="sogga">
-                <img src="images/hotel.png" alt="nice photo">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem sit
-                    impedit distinctio repellendus laudantium odio dolore culpa quod sapiente neque
-                    sequi incidunt repellat eligendi iure cum, tempora explicabo adipisci quae!</p>
-            </div>
-            <div class="sogga">        
-                <img src="images/hotel2.png" alt="nice photo">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem sit
-                        impedit distinctio repellendus laudantium odio dolore culpa quod sapiente neque
-                        sequi incidunt repellat eligendi iure cum, tempora explicabo adipisci quae!</p>
-            </div>
-            <div class="sogga">
-                <img src="images/hotel3.png" alt="nice photo">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem sit
-                    impedit distinctio repellendus laudantium odio dolore culpa quod sapiente neque
-                    sequi incidunt repellat eligendi iure cum, tempora explicabo adipisci quae!</p>
-            </div>   
-            <div class="sogga">
-                <img src="images/hotel4.png" alt="nice photo">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem sit
-                    impedit distinctio repellendus laudantium odio dolore culpa quod sapiente neque
-                    sequi incidunt repellat eligendi iure cum, tempora explicabo adipisci quae!</p>
-            </div>
-        </main>
-        <footer>
-            <p>Copyright 2023</p>
-            <a href="a">Terms & Conditions</a>
-            <a href="a">Policy</a>
-        </footer>
-    </body>
+<body>
+</body>
 
 </html>
